--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-6 [中共拟对香港选举制度下重手，普选目标或被剔除出基本法](/articles/voa/1042425.md)
+
 3-6 [李克强称坚决遏制“台独”分裂活动，台陆委会回应坚定捍卫国家主权](/articles/voa/1042426.md)
 
 3-5 [澳大利亚媒体因收到人权组织投诉暂停播放中国官媒节目](/articles/voa/1042427.md)
@@ -598,6 +600,4 @@
 2-23 [关注李柱铭等人案件 佩洛西：庭审是对香港法治的侮辱](/articles/voa/1042723.md)
 
 2-23 [纽约众议员科特兹参与德州纾困并批评能源政策](/articles/voa/1042724.md)
-
-2-23 [美国务卿布林肯肯定美台共同推动圣卢西亚发展](/articles/voa/1042725.md)
 
