--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-6 [两会：又见增长目标](/articles/voa/1042424.md)
+
 3-6 [中共拟对香港选举制度下重手，普选目标或被剔除出基本法](/articles/voa/1042425.md)
 
 3-6 [李克强称坚决遏制“台独”分裂活动，台陆委会回应坚定捍卫国家主权](/articles/voa/1042426.md)
@@ -598,6 +600,4 @@
 2-23 [拜登哀悼美国死于新冠病毒的50万人](/articles/voa/1042722.md)
 
 2-23 [关注李柱铭等人案件 佩洛西：庭审是对香港法治的侮辱](/articles/voa/1042723.md)
-
-2-23 [纽约众议员科特兹参与德州纾困并批评能源政策](/articles/voa/1042724.md)
 
