--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-6 [关注孟晚舟案：特朗普言论影响案情了吗？](/articles/rfa/1046196.md)
+
 3-6 [中国强拆清真寺运动扩及云南   学者：穆斯林被逼向绝境](/articles/rfa/1046197.md)
 
 3-5 [中国设定今年经济增长目标6%以上   国防预算增6.8%](/articles/rfa/1046198.md)
@@ -598,6 +600,4 @@
 2-5 [美报告：意见领袖与公众就对华政策有分歧](/articles/rfa/1046494.md)
 
 2-5 [英国撤销中国环球电视网在英播放执照](/articles/rfa/1046495.md)
-
-2-5 [安全港计划第一步  加拿大对香港人开放新工签申请](/articles/rfa/1046496.md)
 
