--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-6 [教皇方济各抵达伊拉克展开“和平朝圣之旅”](/articles/rfi/1033568.md)
+
 3-6 [美国印太司令对中国海警舰等表示“严重的忧虑”](/articles/rfi/1033569.md)
 
 3-6 [拜登国安战略指南支持台港应对中国胁迫台湾表达感谢](/articles/rfi/1033570.md)
@@ -598,6 +600,4 @@
 2-28 [缅甸镇压愈发暴力 周日至少6死 联合国谴责](/articles/rfi/1033866.md)
 
 2-28 [关系紧绷 中国在澳洲年投资额锐减2/3 – 法国国际广播电台 - RFI](/articles/rfi/1033867.md)
-
-2-28 [破共军潜舰封锁 台湾用无人机反潜作战](/articles/rfi/1033868.md)
 
