--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-6 [欧洲多国采购中俄疫苗    法国呼吁欧盟严控药检标准](/articles/rfa/1046193.md)
+
+3-6 [中国民运人士发起全球联署：声援香港民主   抵制北京冬奥会](/articles/rfa/1046194.md)
+
 3-6 [首相亲弟警告：英国大学与中国关系太密切](/articles/rfa/1046195.md)
 
 3-6 [关注孟晚舟案：特朗普言论影响案情了吗？](/articles/rfa/1046196.md)
@@ -596,8 +600,4 @@
 2-5 [拜登政府承诺继续支持争取西藏人权](/articles/rfa/1046491.md)
 
 2-5 [香港民主运动和李柱铭获诺奖提名  北京不高兴](/articles/rfa/1046492.md)
-
-2-5 [世卫专家在武毒所调查  实验室泄露说又成焦点](/articles/rfa/1046493.md)
-
-2-5 [美报告：意见领袖与公众就对华政策有分歧](/articles/rfa/1046494.md)
 
