--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-6 [获奖导演赵婷：从“中国的骄傲”变成“辱华分子”](/articles/rfa/1046190.md)
+
 3-6 [法律学者：香港国安法干涉司法独立](/articles/rfa/1046191.md)
 
 3-6 [李克强和汪洋有关香港的描述出现差异  引发联想](/articles/rfa/1046192.md)
@@ -598,6 +600,4 @@
 2-5 [揭露教育营性侵被指造谣   教育营亲历者挺身而出驳斥中国官媒](/articles/rfa/1046488.md)
 
 2-5 [拜登首次外交演说： 联合盟友应对中国挑战](/articles/rfa/1046489.md)
-
-2-5 [人人影视字幕组成员被抓   网友叹“盗火者”受难](/articles/rfa/1046490.md)
 
