--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-6 [澳洲人回怼中国驻澳公使，“被你视作‘败类’我很骄傲”](/articles/voa/1042419.md)
+
 3-6 [美国和欧盟同意暂停关税 把焦点对准中国](/articles/voa/1042420.md)
 
 3-6 [芯片短缺冲击全球 专家有信心美国仍将是最大赢家](/articles/voa/1042421.md)
@@ -598,6 +600,4 @@
 2-23 [美国新冠死亡人数破50万 中国官媒：这证明美式人权已破产](/articles/voa/1042717.md)
 
 2-23 [加拿大议会认定中国对维吾尔人种族灭绝，呼吁冬奥会地点移出北京](/articles/voa/1042718.md)
-
-2-23 [NASA公布“毅力号”登陆火星影片](/articles/voa/1042719.md)
 
