--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-6 [多国科学家公开信质疑病毒调查    电邮直指中国世卫联手隐瞒](/articles/rfa/1046189.md)
+
 3-6 [获奖导演赵婷：从“中国的骄傲”变成“辱华分子”](/articles/rfa/1046190.md)
 
 3-6 [法律学者：香港国安法干涉司法独立](/articles/rfa/1046191.md)
@@ -598,6 +600,4 @@
 2-5 [圭亚那一夕变脸 片面终止“台湾办公室”协议](/articles/rfa/1046487.md)
 
 2-5 [揭露教育营性侵被指造谣   教育营亲历者挺身而出驳斥中国官媒](/articles/rfa/1046488.md)
-
-2-5 [拜登首次外交演说： 联合盟友应对中国挑战](/articles/rfa/1046489.md)
 
