--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,20 @@
 路透
 ------
 
+3-6 [综述：美国2月就业岗位增幅超预期 劳动力市场复苏重新站稳脚跟](/articles/reuters/1040671.md)
+
+3-6 [焦点：美欧同意冻结飞机补贴争端相关关税四个月 称解决方案应聚焦中国](/articles/reuters/1040672.md)
+
+3-6 [焦点：美联储布拉德称美债收益率仍处于较低水平 无需调整购债操作](/articles/reuters/1040673.md)
+
+3-6 [焦点：中国监管出手遏制金融泡沫 经济增长达标无忧放手处理“沉疴旧疾”](/articles/reuters/1040674.md)
+
+3-6 [焦点：中国今年聚焦“大城市住房突出问题” 房地产金融监管料不断强化](/articles/reuters/1040675.md)
+
+3-6 [汇市一周综述：美元受鲍威尔“鸽”声支撑持于高位 但长期仍偏空](/articles/reuters/1040676.md)
+
+3-6 [金价触及九个月最低 就业报告好于预期提振美元和美债收益率](/articles/reuters/1040677.md)
+
 3-6 [国际油价急升 此前OPEC+基本维持减产力度不变和美国就业增长强劲](/articles/reuters/1040678.md)
 
 3-6 [美国股市在科技股带动下收复失地大幅收高 本周交投震荡](/articles/reuters/1040679.md)
@@ -586,18 +600,4 @@
 2-27 [焦点：英国央行霍尔丹警告通胀“老虎”已经醒来 英债应声大跌](/articles/reuters/1040969.md)
 
 2-27 [一架由香港飞往马德里的波音777货机因引擎控制传感器故障在莫斯科紧急迫降](/articles/reuters/1040970.md)
-
-2-27 [美国坚决支持加拿大要求释放两名被中国拘留加拿大人--国务卿布林肯](/articles/reuters/1040971.md)
-
-2-27 [拜登政府计划允许一项针对中国科技公司的规定下个月生效--华尔街日报](/articles/reuters/1040972.md)
-
-2-27 [巴西监管机构批准5G频谱拍卖规定 未对华为设置任何限制](/articles/reuters/1040973.md)
-
-2-27 [美国SEC暂停15支证券交易 因存在“可疑”社交媒体活动](/articles/reuters/1040974.md)
-
-2-27 [拜登政府计划允许特朗普时代一项针对中国科技公司的规定生效](/articles/reuters/1040975.md)
-
-2-27 [纽约证交所宣布开启针对中海油的正式摘牌程序](/articles/reuters/1040976.md)
-
-2-27 [独家：欧洲央行管委史托纳拉斯呼吁加快购债步伐 以抑制收益率上升](/articles/reuters/1040977.md)
 
