--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,12 @@
 中国数字时代
 ------
 
+3-6 [大而不当等 | 国家电影局称将“完善电影评估体系”，对电影评分进行宏观调控](/articles/cdt/385285.md)
+
+3-6 [纽约时报 | 无所畏惧的一代：站在抗议第一线的缅甸年轻女性（节选）](/articles/cdt/385287.md)
+
+3-6 [三联生活周刊 | 不回家的孩子们](/articles/cdt/385290.md)
+
 3-6 [【网络民议】无依之地不是法外之地](/articles/cdt/385303.md)
 
 3-5 [【立此存照】最高法院发文：​判决无法律依据的，应以核心价值观为指引！（3月1日实施）](/articles/cdt/385311.md)
@@ -594,10 +600,4 @@
 2-1 [编程随想｜每周转载：内卷的天朝，各阶层的众生相（网文17篇）](/articles/cdt/386332.md)
 
 2-1 [【立此存照】正牌五毛工作是怎么样的](/articles/cdt/386340.md)
-
-2-1 [奇客资讯｜ 中国社交平台要求公众账号获得相关资质](/articles/cdt/386342.md)
-
-2-1 [南方周末 |输入法会“背叛”我们吗？](/articles/cdt/386343.md)
-
-2-1 [美国之音 | 许志永丁家喜证实遭受酷刑 家人斥无人性誓追究作恶者](/articles/cdt/386344.md)
 
