--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-6 [美印太司令：担忧未来6年中国强迫改变地区现状，持续对台军售至关重要](/articles/voa/1042412.md)
+
 3-6 [中国政府发出抱怨后 土耳其压制维吾尔抗议者](/articles/voa/1042413.md)
 
 3-6 [弘芯千亿“芯骗”工程落幕 全民“大炼钢铁”的翻版](/articles/voa/1042414.md)
@@ -598,6 +600,4 @@
 2-24 [特鲁多“访问”白宫，与拜登举行首次会谈](/articles/voa/1042710.md)
 
 2-24 [香港将修例 区议员需宣誓拥护《基本法》效忠特区](/articles/voa/1042711.md)
-
-2-23 [因质疑边界冲突死亡人数 中国至少6名网友被抓捕](/articles/voa/1042712.md)
 
