--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+3-6 [新冠重击加勒比旅游经济 中印疫苗闻声而至](/articles/dw/1043562.md)
+
+3-6 [全球经济自由排行榜发布 香港澳门被除名](/articles/dw/1043563.md)
+
+3-6 [关于绿色能源的6个创意！](/articles/dw/1043564.md)
+
 3-6 [香港民主派初选案：四人获准保释](/articles/dw/1043565.md)
 
 3-6 [德儿童读物说“新冠病毒来自中国”引风波](/articles/dw/1043566.md)
@@ -594,10 +600,4 @@
 2-17 [欧洲人权法院：德国对昆都士空袭调查已尽责](/articles/dw/1043860.md)
 
 2-16 [中国驻缅大使：“网上流传中方介入是无稽之谈“](/articles/dw/1043861.md)
-
-2-16 [缅甸政变：昂山素季面临新的指控](/articles/dw/1043862.md)
-
-2-16 [德语媒体: 如何对中国更强硬?](/articles/dw/1043863.md)
-
-2-16 [抗议军政府 缅甸国家足球队罢赛](/articles/dw/1043864.md)
 
