--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+3-6 [初选民主派仅4人获保释 32人将未审先囚近三月 学者忧高保释门坎可致滥控](/articles/rfi/1033546.md)
+
+3-6 [美谴责中国直接攻击香港选举制度违承诺 欧盟称会采取措施应对香港自由恶化](/articles/rfi/1033547.md)
+
+3-6 [葛里芬与活塞达成买断协议 传篮网勇士有意延揽 – 法国国际广播电台 - RFI](/articles/rfi/1033548.md)
+
+3-6 [戴森涉家暴 美职大联盟处分2021整季禁赛 – 法国国际广播电台 - RFI](/articles/rfi/1033549.md)
+
 3-6 [港府谋取缔香港游行搞手「民阵」 透过星媒放风](/articles/rfi/1033550.md)
 
 3-6 [高龄33岁 爵士后卫康利生涯首度入选NBA明星赛 – 法国国际广播电台 - RFI](/articles/rfi/1033551.md)
@@ -592,12 +600,4 @@
 3-1 [缅甸政变后首开庭 翁山苏姬视讯应讯 – 法国国际广播电台 - RFI](/articles/rfi/1033844.md)
 
 3-1 [美债殖利率回跌日股收高 – 法国国际广播电台 - RFI](/articles/rfi/1033845.md)
-
-3-1 [纽约州长致歉 但否认性骚 – 法国国际广播电台 - RFI](/articles/rfi/1033846.md)
-
-3-1 [英美等6大工业化国家民众 对疫苗接受度升高 – 法国国际广播电台 - RFI](/articles/rfi/1033847.md)
-
-3-1 [金球奖赵婷夺最佳导演 已故「黑豹」男星夺影帝 – 法国国际广播电台 - RFI](/articles/rfi/1033848.md)
-
-3-1 [香港47泛民主人士被控颠覆 布林肯吁立即释放 – 法国国际广播电台 - RFI](/articles/rfi/1033849.md)
 
