--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-6 [缅甸再掷催泪弹 联合国特使吁停止镇压](/articles/dw/1043559.md)
+
 3-6 [安全专家：中国黑客大举入侵美国逾3万组织](/articles/dw/1043560.md)
 
 3-6 [“中国不宜当东道主“——蓬佩奥呼吁美国抵制北京冬奥](/articles/dw/1043561.md)
@@ -598,6 +600,4 @@
 2-17 [面对中俄挑战 北约推动变革](/articles/dw/1043857.md)
 
 2-17 [国际社会持续施压  缅军止不住抗议浪潮](/articles/dw/1043858.md)
-
-2-17 [抵制北京冬奥行动酦酵 外交官：等美国带头](/articles/dw/1043859.md)
 
