--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-6 [乌克兰巴士车祸 6死40伤 – 法国国际广播电台 - RFI](/articles/rfi/1033538.md)
+
+3-6 [北京决定全面管控香港 - 法国报纸摘要](/articles/rfi/1033539.md)
+
+3-6 [纪念遇罗克，致敬戈尔巴乔夫 - 微言微语](/articles/rfi/1033540.md)
+
 3-6 [加拿大增添抗疫武器 授权使用娇生疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1033541.md)
 
 3-6 [联合国特使促敦促安理会采采取行动 助缅甸恢复民主 – 法国国际广播电台 - RFI](/articles/rfi/1033542.md)
@@ -594,10 +600,4 @@
 3-1 [香港泛民47人出庭 反送中名人王婆婆现身 – 法国国际广播电台 - RFI](/articles/rfi/1033836.md)
 
 3-1 [驻华外国记者协会：2020年中国媒体自由下滑 – 法国国际广播电台 - RFI](/articles/rfi/1033837.md)
-
-3-1 [纪录片回顾滑雪历史 : 从蒙古到阿尔卑斯山 - 法国文艺欣赏](/articles/rfi/1033838.md)
-
-3-1 [特朗普重返政治角斗场 称美国存亡取决于保守派 或再出马竞选](/articles/rfi/1033839.md)
-
-3-1 [联合国期望筹款38.5亿美元帮助也门度过饥荒](/articles/rfi/1033840.md)
 
