--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-6 [拒当“举手机器”的人民代表](/articles/voa/1042409.md)
+
+3-6 [参议院通过法案加强对孔子学院的监督](/articles/voa/1042410.md)
+
 3-6 [华日：中国黑客攻击了数万美国微软用户](/articles/voa/1042411.md)
 
 3-6 [美印太司令：担忧未来6年中国强迫改变地区现状，持续对台军售至关重要](/articles/voa/1042412.md)
@@ -596,8 +600,4 @@
 2-24 [台湾陆委会新掌门人希望跟中国大陆展开务实交流](/articles/voa/1042707.md)
 
 2-24 [中国试图恐吓在德国的香港活动人士](/articles/voa/1042708.md)
-
-2-24 [美中情局长提名人伯恩斯 曾与中国多次交手](/articles/voa/1042709.md)
-
-2-24 [特鲁多“访问”白宫，与拜登举行首次会谈](/articles/voa/1042710.md)
 
