--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-6 [事实核查：德国丢弃新冠疫苗？](/articles/dw/1043554.md)
+
 3-6 [防止“多数人独裁” 北京拟改革香港选举](/articles/dw/1043555.md)
 
 3-6 [赵婷如何短短数日从“骄傲“变“辱华”？](/articles/dw/1043556.md)
@@ -598,6 +600,4 @@
 2-17 [全球抗议运动的标志和象征](/articles/dw/1043852.md)
 
 2-17 [蚂蚁IPO遭停内幕：对习近平造成潜在挑战的政商权贵们](/articles/dw/1043853.md)
-
-2-17 [客座评论：中国很可能是缅甸局势恶化的输家](/articles/dw/1043854.md)
 
