--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-6 [维舟 | 中国女性地位够高了吗？](/articles/cdt/385284.md)
+
 3-6 [大而不当等 | 国家电影局称将“完善电影评估体系”，对电影评分进行宏观调控](/articles/cdt/385285.md)
 
 3-6 [纽约时报 | 无所畏惧的一代：站在抗议第一线的缅甸年轻女性（节选）](/articles/cdt/385287.md)
@@ -598,6 +600,4 @@
 2-1 [史料搬运工｜消失无踪的阳刚之气](/articles/cdt/386330.md)
 
 2-1 [编程随想｜每周转载：内卷的天朝，各阶层的众生相（网文17篇）](/articles/cdt/386332.md)
-
-2-1 [【立此存照】正牌五毛工作是怎么样的](/articles/cdt/386340.md)
 
