--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+3-7 [equALL  | 对话弦子：投降不是一个可以的选择](/articles/cdt/385278.md)
+
+3-6 [自由亚洲 | 获奖导演赵婷：从“中国的骄傲”变成“辱华分子”](/articles/cdt/385280.md)
+
 3-6 [维舟 | 中国女性地位够高了吗？](/articles/cdt/385284.md)
 
 3-6 [大而不当等 | 国家电影局称将“完善电影评估体系”，对电影评分进行宏观调控](/articles/cdt/385285.md)
@@ -596,8 +600,4 @@
 2-1 [豆瓣读书｜挑食小猪猪：什么是反苏维埃案件？](/articles/cdt/386327.md)
 
 2-1 [看理想｜别再逼青少年“阳刚”了](/articles/cdt/386328.md)
-
-2-1 [史料搬运工｜消失无踪的阳刚之气](/articles/cdt/386330.md)
-
-2-1 [编程随想｜每周转载：内卷的天朝，各阶层的众生相（网文17篇）](/articles/cdt/386332.md)
 
