--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-7 [教宗方济各历史性访问伊拉克 传递“和平共存”信息](/articles/voa/1042408.md)
+
 3-6 [拒当“举手机器”的人民代表](/articles/voa/1042409.md)
 
 3-6 [参议院通过法案加强对孔子学院的监督](/articles/voa/1042410.md)
@@ -598,6 +600,4 @@
 2-24 [立陶宛关注中国威胁和新疆议题](/articles/voa/1042706.md)
 
 2-24 [台湾陆委会新掌门人希望跟中国大陆展开务实交流](/articles/voa/1042707.md)
-
-2-24 [中国试图恐吓在德国的香港活动人士](/articles/voa/1042708.md)
 
