--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-7 [德语媒体：中国崛起将受阻](/articles/dw/1043550.md)
+
+3-7 [评论：金熊奖获奖电影“不只是黄片”](/articles/dw/1043551.md)
+
 3-6 [世卫反对疫苗护照 专家预计疫情明年初结束](/articles/dw/1043552.md)
 
 3-6 [停播争议后 CGTN重回德国电视网](/articles/dw/1043553.md)
@@ -596,8 +600,4 @@
 2-17 [为什么以色列在全球范围内疫苗施打速度最快？](/articles/dw/1043848.md)
 
 2-17 [柬埔寨要引入“中国式”防火墙](/articles/dw/1043849.md)
-
-2-17 [拜登：中国将会为践踏人权的行为付出代价](/articles/dw/1043850.md)
-
-2-17 [人们追问“去哪里了”？ 金正恩夫人现身了](/articles/dw/1043851.md)
 
