--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-7 [教宗方济各伊拉克会晤伊斯兰大教长](/articles/rfi/1033523.md)
+
+3-7 [缅甸军政府加剧镇压示威活动，联合国特使呼吁采取行动](/articles/rfi/1033524.md)
+
+3-7 [彭定康：修改香港选举制度，中共违背其所有承诺](/articles/rfi/1033525.md)
+
 3-7 [电影《无依之地》疑在中国撤档 导演赵婷从骄傲变“辱华”](/articles/rfi/1033526.md)
 
 3-7 [微软称中国黑客通过漏洞攻击用户 消息人士：逾2万家美国机构受到影响](/articles/rfi/1033527.md)
@@ -594,10 +600,4 @@
 3-1 [【视频】缅甸周一抗议活动持续 昂山素季出庭获加控两新罪](/articles/rfi/1033821.md)
 
 3-1 [【视频】卸任后政坛首秀 特朗普自居代表共和党未来 暗示或参加2024年大选](/articles/rfi/1033822.md)
-
-3-1 [港47名民主派人士提堂，众多支持者到场声援 - 要闻解说](/articles/rfi/1033823.md)
-
-3-1 [法国前总统萨科齐被判3年徒刑含1年实刑](/articles/rfi/1033824.md)
-
-3-1 [昂山素季又添新控罪 视频出庭 昨天镇压酿18人死](/articles/rfi/1033825.md)
 
