--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-7 [塞尔维亚在巴尔干打Covid疫苗牌](/articles/rfi/1033522.md)
+
 3-7 [教宗方济各伊拉克会晤伊斯兰大教长](/articles/rfi/1033523.md)
 
 3-7 [缅甸军政府加剧镇压示威活动，联合国特使呼吁采取行动](/articles/rfi/1033524.md)
@@ -598,6 +600,4 @@
 3-1 [反制中国科技雄心 传美国拟与台湾等国组联盟](/articles/rfi/1033820.md)
 
 3-1 [【视频】缅甸周一抗议活动持续 昂山素季出庭获加控两新罪](/articles/rfi/1033821.md)
-
-3-1 [【视频】卸任后政坛首秀 特朗普自居代表共和党未来 暗示或参加2024年大选](/articles/rfi/1033822.md)
 
