--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-7 [也门激烈内战导致90人死亡](/articles/voa/1042403.md)
+
 3-7 [美国参议院通过新冠疫情纾困法案](/articles/voa/1042404.md)
 
 3-7 [报道：俄罗斯情报机构与中国间谍去年网络攻击欧盟药物机构](/articles/voa/1042405.md)
@@ -598,6 +600,4 @@
 2-24 [气候变化：美中合作的起点还是北京施压华盛顿的工具？](/articles/voa/1042701.md)
 
 2-24 [参议院确认拜登的联合国大使人选](/articles/voa/1042702.md)
-
-2-24 [时事大家谈: 习近平要求树立“正确党史观”，党史也得姓党？](/articles/voa/1042703.md)
 
