--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-7 [美国与塔利班恢复和平谈判](/articles/voa/1042402.md)
+
 3-7 [也门激烈内战导致90人死亡](/articles/voa/1042403.md)
 
 3-7 [美国参议院通过新冠疫情纾困法案](/articles/voa/1042404.md)
@@ -598,6 +600,4 @@
 2-24 [美国宇航局“毅力号”火星车传回人类首次听到的火星录音](/articles/voa/1042700.md)
 
 2-24 [气候变化：美中合作的起点还是北京施压华盛顿的工具？](/articles/voa/1042701.md)
-
-2-24 [参议院确认拜登的联合国大使人选](/articles/voa/1042702.md)
 
