--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 3-7 [equALL  | 对话弦子：投降不是一个可以的选择](/articles/cdt/385278.md)
 
+3-7 [【旧闻重温】Matters | 关于恐维症，关于大屠杀](/articles/cdt/385279.md)
+
 3-6 [自由亚洲 | 获奖导演赵婷：从“中国的骄傲”变成“辱华分子”](/articles/cdt/385280.md)
 
 3-7 [全现在 | 缅甸政变后最黑暗那一天，19岁华裔少女为抗议而死](/articles/cdt/385282.md)
@@ -598,6 +600,4 @@
 2-2 [华语江湖 | 李大钊：不要借口危险思想来禁止言论自由](/articles/cdt/386321.md)
 
 2-2 [【CDT网语】2021年1月网语集锦：这个国家没有新闻只有旧事，不停换名字罢了](/articles/cdt/386323.md)
-
-2-1 [新周刊｜寂寞身后事：川师大坠亡教授庹继光的高光与困顿](/articles/cdt/386324.md)
 
