--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-7 [尖椒部落 | 庆祝妇女节除了买买买，还可以是不买](/articles/cdt/385265.md)
+
 3-7 [K  Za Win：狱中来信](/articles/cdt/385271.md)
 
 3-7 [equALL  | 对话弦子：投降不是一个可以的选择](/articles/cdt/385278.md)
@@ -598,6 +600,4 @@
 2-2 [同语 | 权益2020（上）：牵动你我的LGBT大事件](/articles/cdt/386320.md)
 
 2-2 [华语江湖 | 李大钊：不要借口危险思想来禁止言论自由](/articles/cdt/386321.md)
-
-2-2 [【CDT网语】2021年1月网语集锦：这个国家没有新闻只有旧事，不停换名字罢了](/articles/cdt/386323.md)
 
