--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+3-7 [疫情严峻引发街头抗争 巴拉圭内阁改组平众怒 – 法国国际广播电台 - RFI](/articles/rfi/1033507.md)
+
+3-7 [Covid-19口服药 研究：明显降低病患病毒量 – 法国国际广播电台 - RFI](/articles/rfi/1033508.md)
+
 3-7 [委内瑞拉总统接种俄罗斯疫苗首剂 – 法国国际广播电台 - RFI](/articles/rfi/1033509.md)
 
 3-7 [不耐防疫封锁影响生计  维也纳街头千人抗议 – 法国国际广播电台 - RFI](/articles/rfi/1033510.md)
@@ -596,8 +600,4 @@
 3-2 [第71届柏林电影节开幕](/articles/rfi/1033805.md)
 
 3-2 [美国新冠疫苗注射器及针头80%来自中国  依赖程度之高令国会议员震惊](/articles/rfi/1033806.md)
-
-3-2 [北京真的希望就稀土宣战吗？ - 法国世界报](/articles/rfi/1033807.md)
-
-3-2 [马克龙：法国还需再坚持4到6周才可能放宽防疫措施](/articles/rfi/1033808.md)
 
