--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+3-7 [第二名港人接种疫苗后中风死亡 接种计划不叫停](/articles/rfi/1033505.md)
+
+3-7 [美参院挑灯夜战 通过1.9兆美元纾困法案 – 法国国际广播电台 - RFI](/articles/rfi/1033506.md)
+
 3-7 [疫情严峻引发街头抗争 巴拉圭内阁改组平众怒 – 法国国际广播电台 - RFI](/articles/rfi/1033507.md)
 
 3-7 [Covid-19口服药 研究：明显降低病患病毒量 – 法国国际广播电台 - RFI](/articles/rfi/1033508.md)
@@ -596,8 +600,4 @@
 3-2 [世卫：全球今年无法消灭病毒 – 法国国际广播电台 - RFI](/articles/rfi/1033803.md)
 
 3-2 [禁止质疑解放军死亡数字 北京紧急立法追诉辣笔小球](/articles/rfi/1033804.md)
-
-3-2 [第71届柏林电影节开幕](/articles/rfi/1033805.md)
-
-3-2 [美国新冠疫苗注射器及针头80%来自中国  依赖程度之高令国会议员震惊](/articles/rfi/1033806.md)
 
