--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-7 [缓解缅甸局势 北京称愿意帮忙](/articles/dw/1043540.md)
+
 3-7 [日本为何成为东亚的防疫“差生”？](/articles/dw/1043541.md)
 
 3-7 [2020年中国对澳洲投资暴跌超六成](/articles/dw/1043542.md)
@@ -598,6 +600,4 @@
 2-17 [英国变种病毒在德国加速扩散](/articles/dw/1043838.md)
 
 2-17 [德语媒体：脱钩与挂钩](/articles/dw/1043839.md)
-
-2-17 [专访：对抗中俄伊，北约是美国的 “欧洲支柱 “](/articles/dw/1043840.md)
 
