--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-7 [【404文库】张展的泪与血](/articles/cdt/385260.md)
+
 3-7 [尖椒部落 | 庆祝妇女节除了买买买，还可以是不买](/articles/cdt/385265.md)
 
 3-7 [K  Za Win：狱中来信](/articles/cdt/385271.md)
@@ -598,6 +600,4 @@
 2-2 [自由亚洲 | 耿潇男夫妇被起诉“非法经营罪” 春节前开庭](/articles/cdt/386319.md)
 
 2-2 [同语 | 权益2020（上）：牵动你我的LGBT大事件](/articles/cdt/386320.md)
-
-2-2 [华语江湖 | 李大钊：不要借口危险思想来禁止言论自由](/articles/cdt/386321.md)
 
