--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-7 [新冠肺炎全球逾1亿1641万例确诊 258万多人病亡 – 法国国际广播电台 - RFI](/articles/rfi/1033494.md)
+
+3-7 [IS让摩苏尔变废墟 教宗到访为受难者祈祷 – 法国国际广播电台 - RFI](/articles/rfi/1033495.md)
+
+3-7 [以色列研发快速充电技术 将让电动车如虎添翼 – 法国国际广播电台 - RFI](/articles/rfi/1033496.md)
+
 3-7 [女友成反政变运动首名死者 缅甸青年誓言续反抗 – 法国国际广播电台 - RFI](/articles/rfi/1033497.md)
 
 3-7 [中国逐渐打破国际海洋法规则 - 法国报纸摘要](/articles/rfi/1033498.md)
@@ -594,10 +600,4 @@
 3-2 [北京被指欲在港推伊朗式特首选举](/articles/rfi/1033792.md)
 
 3-2 [中大学生会受校方打压 又接「死亡恐吓」 上任首日即请辞 一众大学亦堪忧](/articles/rfi/1033793.md)
-
-3-2 [港台处长履新日 中高层三职员辞职 抗议管治新风](/articles/rfi/1033794.md)
-
-3-2 [政坛性侵控诉连环爆 澳洲总理压力增 – 法国国际广播电台 - RFI](/articles/rfi/1033795.md)
-
-3-2 [缅甸记者在家遇袭遭逮 下落不明 – 法国国际广播电台 - RFI](/articles/rfi/1033796.md)
 
