--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-7 [牛年“开门红”  中国出口今年前两月猛增60%](/articles/dw/1043534.md)
+
 3-7 [德国又一名联邦议员因“口罩丑闻”宣布辞职](/articles/dw/1043535.md)
 
 3-7 [贝多芬第八交响曲第二乐章](/articles/dw/1043536.md)
@@ -598,6 +600,4 @@
 2-18 [国安法如何威胁香港互联网自由？](/articles/dw/1043832.md)
 
 2-18 [美国重启四方安全对话 周四举行线上会谈](/articles/dw/1043833.md)
-
-2-18 [民调：英国民众对中国警觉提高](/articles/dw/1043834.md)
 
