--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-7 [美国新任防长或于下星期访问印度讨论加强防务合作](/articles/voa/1042397.md)
+
+3-7 [中国对外威胁增加 西方加强应对](/articles/voa/1042398.md)
+
 3-7 [缅甸全面爆发抗议示威，曼德勒警方向静坐者投催泪弹](/articles/voa/1042399.md)
 
 3-7 [原中国工信部长：中国成为制造强国至少要30年](/articles/voa/1042400.md)
@@ -596,8 +600,4 @@
 2-24 [美台驻WTO官员在日内瓦会晤](/articles/voa/1042695.md)
 
 2-24 [中国疫苗外交旨在深化与中欧和东欧的联系](/articles/voa/1042696.md)
-
-2-24 [VOA连线(张蓉湘): 美深化与欧合作顶回中国试图破坏国际规则](/articles/voa/1042697.md)
-
-2-24 [抵制北京冬奥会？赞助商面临的压力不断加大](/articles/voa/1042698.md)
 
