--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-8 [澎湃新闻评论 |  赵婷的成功，宋丹丹不一定理解得了](/articles/cdt/385251.md)
+
 3-7 [维舟 | 货拉拉的苦果](/articles/cdt/385253.md)
 
 3-7 [【404文库】张展的泪与血](/articles/cdt/385260.md)
@@ -598,6 +600,4 @@
 2-6 [【CDT连载】巴奴的救赎（后记•心痛欲裂）更新](/articles/cdt/386314.md)
 
 2-2 [法律园地 | 因转发非官方解读的历史人物及历史事件文章，《法史天地》公众号被关闭](/articles/cdt/386315.md)
-
-2-2 [自由亚洲 | 耿潇男夫妇被起诉“非法经营罪” 春节前开庭](/articles/cdt/386319.md)
 
