--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-8 [厄瓜多尔内政部长因监狱暴乱辞职](/articles/rfi/1033482.md)
+
+3-8 [韩美周一开始军事联演，受疫情影响规模缩小](/articles/rfi/1033483.md)
+
+3-8 [回应王毅就台无妥协说 陆委会：台湾从来不是中华人民共和国一部分](/articles/rfi/1033484.md)
+
 3-8 [缅甸抗议中死亡的华裔少女遭军方掘坟验尸 引发民众愤慨](/articles/rfi/1033485.md)
 
 3-8 [哈利梅根专访播出前 英王室集合亮相 – 法国国际广播电台 - RFI](/articles/rfi/1033486.md)
@@ -594,10 +600,4 @@
 3-2 [日本官房长官称中国海警舰“违反国际法”](/articles/rfi/1033780.md)
 
 3-2 [珍爱藻礁公投联署突破法定门坎八月台湾将就四大公投案举行投票](/articles/rfi/1033781.md)
-
-3-2 [被澳洲关在太平洋岛屿多年 数十难民终获释 – 法国国际广播电台 - RFI](/articles/rfi/1033782.md)
-
-3-2 [亚股走势分歧 – 法国国际广播电台 - RFI](/articles/rfi/1033783.md)
-
-3-2 [法国前总统沙柯吉涉贪遭判刑恐断复出政坛之路 – 法国国际广播电台 - RFI](/articles/rfi/1033784.md)
 
