--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-8 [拜登：《美国救援计划》除解救疫情还能与中国竞争](/articles/voa/1042393.md)
+
+3-8 [拜登下令进一步扩大美国投票权限](/articles/voa/1042394.md)
+
 3-8 [分析人士：中国政府试图一劳永逸地“解决”香港问题](/articles/voa/1042395.md)
 
 3-8 [拜登政府继续支持台湾 中国外长周日警告美国不要继续“玩火”](/articles/voa/1042396.md)
@@ -596,8 +600,4 @@
 2-24 [伴随老师接种疫苗 催促返校呼声渐高](/articles/voa/1042691.md)
 
 2-24 [加州疫情有所好转 学校重开未成共识](/articles/voa/1042692.md)
-
-2-24 [美联储主席：美国经济复苏“远未完成”](/articles/voa/1042693.md)
-
-2-24 [高尔夫球名将伍兹发生严重车祸并受伤](/articles/voa/1042694.md)
 
