--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,22 @@
 法广
 ------
 
+3-8 [塞尔日·达索长子-奥利维耶·达索(Olivier Dassault) 坠机身亡](/articles/rfi/1033472.md)
+
+3-8 [内蒙中小学全面使用国家统编教材？习近平人大最新表态](/articles/rfi/1033473.md)
+
+3-8 [缅甸工会联盟号召3/8全国大罢工 盼制止军事政变](/articles/rfi/1033474.md)
+
+3-8 [王毅对美喊话求合作但对台湾无妥协余地 - 要闻分析](/articles/rfi/1033475.md)
+
+3-8 [挑战王室   哈利、梅根专访将播出](/articles/rfi/1033476.md)
+
+3-8 [印度：强奸同性依然不受法律制裁](/articles/rfi/1033477.md)
+
+3-8 [瑞士公投   以微弱多数通过禁止罩袍禁令](/articles/rfi/1033478.md)
+
+3-8 [塔利班同美国重新开始和平谈判](/articles/rfi/1033479.md)
+
 3-8 [阿联酋阿布扎比卢浮宫博物馆的启示](/articles/rfi/1033480.md)
 
 3-8 [爱拉斯莫的生活与思想第九节 惊人之作《愚人颂》 - 欧洲思想文化长廊](/articles/rfi/1033481.md)
@@ -584,20 +600,4 @@
 3-2 [富豪矢言2030年前 全面生产纯电动车 – 法国国际广播电台 - RFI](/articles/rfi/1033770.md)
 
 3-2 [前苏联领导人戈巴契夫 医院隔离庆祝90大寿 – 法国国际广播电台 - RFI](/articles/rfi/1033771.md)
-
-3-2 [法前总统萨科齐被判刑，媒体评论不一 - 法国报纸摘要](/articles/rfi/1033772.md)
-
-3-2 [缅甸华裔公民谈缅甸实况及对北京的看法 - 要闻解说](/articles/rfi/1033773.md)
-
-3-2 [失去达能首席执行官之位 范易谋保留董事会主席之职 - 今日经济](/articles/rfi/1033774.md)
-
-3-2 [华为继续为加大学研究提供资金 - 北美来鸿](/articles/rfi/1033775.md)
-
-3-2 [未见“婴儿潮”，法国疫情首封9个月后出生率反呈历史性下降 - 法国风土人情](/articles/rfi/1033776.md)
-
-3-2 [迦纳总统成接种COVAX提供疫苗第一人 – 法国国际广播电台 - RFI](/articles/rfi/1033777.md)
-
-3-2 [威廉森表现优异  助鹈鹕击败爵士 – 法国国际广播电台 - RFI](/articles/rfi/1033778.md)
-
-3-2 [非裔女经理指控 亚马逊种族和性别歧视 – 法国国际广播电台 - RFI](/articles/rfi/1033779.md)
 
