--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-8 [国际妇女节 多国女议员为新疆少数族裔妇女发声](/articles/rfa/1046187.md)
+
 3-8 [中藏协议七十年血泪 藏人台北游行 ：永不屈服](/articles/rfa/1046188.md)
 
 3-6 [多国科学家公开信质疑病毒调查    电邮直指中国世卫联手隐瞒](/articles/rfa/1046189.md)
@@ -598,6 +600,4 @@
 2-5 [台美半导体供应链会议 倡议加入经济合作组织](/articles/rfa/1046485.md)
 
 2-5 [国安教育由娃娃抓起 全港中、小学设立国安监察小组](/articles/rfa/1046486.md)
-
-2-5 [圭亚那一夕变脸 片面终止“台湾办公室”协议](/articles/rfa/1046487.md)
 
