--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-8 [缅甸工会吁全国罢工 民盟官员羁押期间死亡](/articles/dw/1043532.md)
+
 3-7 [达赖喇嘛接种印度产AZ疫苗](/articles/dw/1043533.md)
 
 3-7 [牛年“开门红”  中国出口今年前两月猛增60%](/articles/dw/1043534.md)
@@ -598,6 +600,4 @@
 2-18 [国际公共广播电视服务机构谴责BBC在中国遭禁](/articles/dw/1043830.md)
 
 2-18 [英国批准全球首例“人为”新冠感染研究](/articles/dw/1043831.md)
-
-2-18 [国安法如何威胁香港互联网自由？](/articles/dw/1043832.md)
 
