--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-8 [美国的娱乐政治化面面观](/articles/voa/1042390.md)
+
 3-8 [沙特领导的联军袭击也门反政府军控制的首都](/articles/voa/1042391.md)
 
 3-8 [布林肯警告阿富汗总统，如果不采取紧急措施，后果将十分严重](/articles/voa/1042392.md)
@@ -598,6 +600,4 @@
 2-24 [“梦想金州”成“失乐园”？加州居民为何纷纷搬离](/articles/voa/1042688.md)
 
 2-24 [“运动员应知道风险” 美国会共和党领袖推立法、致函白宫反制北京冬奥](/articles/voa/1042689.md)
-
-2-24 [国会前安保官员称国会骚乱事件的安全疏失与情报失误有关](/articles/voa/1042690.md)
 
