--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+3-8 [赵小兰未能成行的访华之旅背后：公私不分引发伦理审查](/articles/nyt/1047106.md)
+
+3-8 [中国对部分海外旅客进行肛拭子检测，引发外国政府抗议](/articles/nyt/1047107.md)
+
 3-8 [赵婷被指“辱华”，《无依之地》在中国遭抵制审查](/articles/nyt/1047108.md)
 
 3-8 [简报：《无依之地》在中国遭抵制；微软称遭中国黑客攻击](/articles/nyt/1047109.md)
@@ -596,8 +600,4 @@
 12-22 [“整个城市都是黑的”：中国多地为何限电？](/articles/nyt/1047404.md)
 
 12-22 [简报：中国多地限电；香港活动人士罗冠聪在英国寻求庇护](/articles/nyt/1047405.md)
-
-12-21 [疫情“助推”下，中国开始直面心理健康问题](/articles/nyt/1047406.md)
-
-12-21 [英国出现新冠病毒变种意味着什么？](/articles/nyt/1047407.md)
 
