--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-8 [弗洛伊德案涉事警员肖万将受审](/articles/voa/1042389.md)
+
 3-8 [美国的娱乐政治化面面观](/articles/voa/1042390.md)
 
 3-8 [沙特领导的联军袭击也门反政府军控制的首都](/articles/voa/1042391.md)
@@ -598,6 +600,4 @@
 2-24 [报道：美参议员将重新推出应对中国对美企言论审查的法案](/articles/voa/1042687.md)
 
 2-24 [“梦想金州”成“失乐园”？加州居民为何纷纷搬离](/articles/voa/1042688.md)
-
-2-24 [“运动员应知道风险” 美国会共和党领袖推立法、致函白宫反制北京冬奥](/articles/voa/1042689.md)
 
