--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-8 [微软电邮系统被中国政府黑客攻入后修补程序 白宫称威胁仍在发展中](/articles/voa/1042387.md)
+
 3-8 [美韩达成驻军分摊新协议 首尔将分摊更多开支](/articles/voa/1042388.md)
 
 3-8 [弗洛伊德案涉事警员肖万将受审](/articles/voa/1042389.md)
@@ -598,6 +600,4 @@
 2-24 [谴责北京将两名加拿大公民当谈判筹码 拜登与特鲁多商讨共同反制中国威胁](/articles/voa/1042685.md)
 
 2-24 [人权组织呼吁抵制北京冬奥 多数赞助商未予表态](/articles/voa/1042686.md)
-
-2-24 [报道：美参议员将重新推出应对中国对美企言论审查的法案](/articles/voa/1042687.md)
 
