--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-8 [拓荒者小将大秀创意 吻篮框失败仍获灌篮大赛冠军 – 法国国际广播电台 - RFI](/articles/rfi/1033466.md)
+
+3-8 [梅根：英媒负面报导轰炸 我曾不想活了 – 法国国际广播电台 - RFI](/articles/rfi/1033467.md)
+
+3-8 [教宗会叙利亚伏尸男童父 聆听难民苦痛 – 法国国际广播电台 - RFI](/articles/rfi/1033468.md)
+
 3-8 [教宗造访伊拉克 会见叙利亚伏尸沙滩男童父亲 – 法国国际广播电台 - RFI](/articles/rfi/1033469.md)
 
 3-8 [NBA明星赛三分球大赛 柯瑞力压康利夺冠 – 法国国际广播电台 - RFI](/articles/rfi/1033470.md)
@@ -594,10 +600,4 @@
 3-3 [中国亿万富豪人数在疫情中快速增长](/articles/rfi/1033764.md)
 
 3-3 [控俄国对反对派领袖下毒 美将实施制裁 – 法国国际广播电台 - RFI](/articles/rfi/1033765.md)
-
-3-3 [无国界记者组织控告沙乌地王储涉哈绍吉谋杀案 – 法国国际广播电台 - RFI](/articles/rfi/1033766.md)
-
-3-2 [人权律师江天勇刑满释放两周年仍被软禁](/articles/rfi/1033767.md)
-
-3-2 [中国申请国际专利件数再登龙头 扩大领先美国 – 法国国际广播电台 - RFI](/articles/rfi/1033768.md)
 
