--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+3-8 [华夏幸福中票触发交叉保护条款违约 媒体称冀中能源PPN技术违约后完成兑付](/articles/reuters/1040626.md)
+
 3-8 [综述：中国十四五未设GDP量化目标并非不要增速 有把握“保持一定增速”](/articles/reuters/1040627.md)
 
 3-8 [推行“疫苗护照”仍不足以重振旅游 料全球旅游业要到2024年始复苏--报告](/articles/reuters/1040628.md)
@@ -598,6 +600,4 @@
 3-1 [中国股市反弹收高逾1% 投资者无视制造业活动放缓](/articles/reuters/1040924.md)
 
 3-1 [伊朗称美国应先解除对伊制裁 然后谈判重启2015年核协议](/articles/reuters/1040925.md)
-
-3-1 [独家：欧盟审核印度疫苗生产商 阿斯利康寻求增加供应--消息](/articles/reuters/1040926.md)
 
