--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-8 [一周世界舆论聚焦：中国落实邓小平的香港遗训及后续问题](/articles/ft/1045927.md)
+
 3-8 [美韩就驻韩美军军费分担达成一致](/articles/ft/1045928.md)
 
 3-8 [马金瑜事件、女权主义与社会反家暴机制](/articles/ft/1045929.md)
@@ -598,6 +600,4 @@
 1-21 [拜登宣誓就任美国第46任总统](/articles/ft/1046225.md)
 
 1-21 [拜登就职日“匿名者Q”阴谋论陷入危机](/articles/ft/1046226.md)
-
-1-21 [美国商界：将与拜登加税、提高最低工资计划相抗争](/articles/ft/1046227.md)
 
