--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-8 [林郑感谢北京为港「解困」 新制度恐影响立法会选举](/articles/dw/1043529.md)
+
 3-8 [国防预算增长引关注 北京：天下并不太平](/articles/dw/1043530.md)
 
 3-8 [挡不住中国黑客? 白宫传组建特别小组因应](/articles/dw/1043531.md)
@@ -598,6 +600,4 @@
 2-18 [拜登终同内塔尼亚胡通了电话](/articles/dw/1043827.md)
 
 2-18 [争议之举: 脸书禁止澳洲用户在其平台分享新闻](/articles/dw/1043828.md)
-
-2-18 [特朗普秋后算账：让麦康奈尔下台！](/articles/dw/1043829.md)
 
