--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-8 [梅根：英国王室生活令我一度想自杀](/articles/nyt/1047104.md)
+
 3-8 [公益人士顾陈晋明逝世，曾参与“春蕾计划”资助贫困女童](/articles/nyt/1047105.md)
 
 3-8 [赵小兰未能成行的访华之旅背后：公私不分引发伦理审查](/articles/nyt/1047106.md)
@@ -598,6 +600,4 @@
 12-22 [如何在节日季送出真正的“好”礼物](/articles/nyt/1047402.md)
 
 12-22 [香港活动人士罗冠聪在英国寻求政治庇护](/articles/nyt/1047403.md)
-
-12-22 [“整个城市都是黑的”：中国多地为何限电？](/articles/nyt/1047404.md)
 
