--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-8 [【CDT周报】第七期：如果弱者不能免于恐惧，那全社会都要为此付出代价](/articles/cdt/385242.md)
+
 3-8 [BBC | 中国两会：美国谴责北京改变香港选举制度“攻击民主体制”](/articles/cdt/385245.md)
 
 3-8 [【网络民议】  习近平：中国已经可以平视这个世界了；网友：难道以前是仇视？](/articles/cdt/385250.md)
@@ -598,6 +600,4 @@
 2-2 [网信唐山｜国家网信办：2020年约谈网站4282家，暂停更新1994家](/articles/cdt/386303.md)
 
 2-2 [【异闻观止】“学习强国”接入物联网进入威马车载系统](/articles/cdt/386307.md)
-
-2-2 [【图说天朝】禁止在财政局机关大楼门口烧香点烛等祈福活动](/articles/cdt/386312.md)
 
