--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+3-8 [【图说天朝】搞三八节活动被喝茶 警察索要“波伏娃”微信](/articles/cdt/385237.md)
+
+3-8 [自由亚洲｜方斌在哪里？武汉公民记者方斌被捕超过一年](/articles/cdt/385239.md)
+
 3-8 [【CDT周报】第七期：如果弱者不能免于恐惧，那全社会都要为此付出代价](/articles/cdt/385242.md)
 
 3-8 [BBC | 中国两会：美国谴责北京改变香港选举制度“攻击民主体制”](/articles/cdt/385245.md)
@@ -596,8 +600,4 @@
 2-2 [兽爷丨归归归零](/articles/cdt/386297.md)
 
 2-2 [【网络民议】南方周末前首席评论员李铁告别“公知生涯” 胡锡进点赞](/articles/cdt/386302.md)
-
-2-2 [网信唐山｜国家网信办：2020年约谈网站4282家，暂停更新1994家](/articles/cdt/386303.md)
-
-2-2 [【异闻观止】“学习强国”接入物联网进入威马车载系统](/articles/cdt/386307.md)
 
