--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-8 [战狼外交后遗症  原料价大涨家电价急涨两成](/articles/rfa/1046185.md)
+
 3-8 [最早曝光武汉肺炎现场惨状   方斌被以“寻衅滋事罪”刑拘](/articles/rfa/1046186.md)
 
 3-8 [国际妇女节 多国女议员为新疆少数族裔妇女发声](/articles/rfa/1046187.md)
@@ -598,6 +600,4 @@
 2-5 [核酸证明被滥用   中国急令限制核检次数](/articles/rfa/1046483.md)
 
 2-5 [疫苗争夺战传喜讯  台湾从世卫获首批疫苗](/articles/rfa/1046484.md)
-
-2-5 [台美半导体供应链会议 倡议加入经济合作组织](/articles/rfa/1046485.md)
 
