--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-8 [瑞士全民公决禁公共场所蒙面](/articles/dw/1043526.md)
+
 3-8 [评论：北京两手进一步掏空香港](/articles/dw/1043527.md)
 
 3-8 [三八之际:谷歌图片搜索里的 “性感“女人](/articles/dw/1043528.md)
@@ -598,6 +600,4 @@
 2-18 [哪些美国总统发表过农历新年贺词](/articles/dw/1043824.md)
 
 2-18 [无论对美对中 欧盟决心更坚定维护自身商贸利益](/articles/dw/1043825.md)
-
-2-18 [爱沙尼亚情报部门：“北京有一个明确的目标”](/articles/dw/1043826.md)
 
