--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+3-8 [日美澳印首脑将在周末举行线上会谈](/articles/rfi/1033445.md)
+
+3-8 [台帛将开放旅游泡泡帛琉总统惠恕仁将访台宣布](/articles/rfi/1033446.md)
+
+3-8 [经济复苏迹象不敌通膨疑虑 亚股多收跌 – 法国国际广播电台 - RFI](/articles/rfi/1033447.md)
+
+3-8 [解放报：CGNT将再遭英国制裁 - 法国报纸摘要](/articles/rfi/1033448.md)
+
+3-8 [美国人对中国的观感 - 美国专栏](/articles/rfi/1033449.md)
+
 3-8 [拜登将成立工作组应对微软邮件系统遭黑客入侵事件](/articles/rfi/1033450.md)
 
 3-8 [缅军方继续开枪镇压民间抗议，中国依然拒绝选边站](/articles/rfi/1033451.md)
@@ -590,14 +600,4 @@
 3-3 [震荡下跌 美股收低 – 法国国际广播电台 - RFI](/articles/rfi/1033743.md)
 
 3-3 [无视亚洲和美股挫跌 欧股收红 – 法国国际广播电台 - RFI](/articles/rfi/1033744.md)
-
-3-3 [法国政府尽最大可能扩大可以接种新冠疫苗的人群](/articles/rfi/1033745.md)
-
-3-3 [变种新冠病毒感染大幅增加 4月将成美国主要感染源](/articles/rfi/1033746.md)
-
-3-3 [美国加州休旅车及货车碰撞 至少酿15死 – 法国国际广播电台 - RFI](/articles/rfi/1033747.md)
-
-3-3 [对在中国工作的外国记者来说，2020年不是一个好年份 - 法国世界报](/articles/rfi/1033748.md)
-
-3-3 [苏联共产帝国终结者 戈尔巴乔夫90岁生日](/articles/rfi/1033749.md)
 
