--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-8 [“港人治港”不再    “京人治港”势在必行？](/articles/rfa/1046182.md)
+
 3-8 [台湾学者解读两会 习近平往20大集权方向迈进](/articles/rfa/1046183.md)
 
 3-8 [坚持不改一字！殷海光著作授权中国出版破局](/articles/rfa/1046184.md)
@@ -598,6 +600,4 @@
 2-6 [拜登主政下孟晚舟案能否解套？专家：问题出在中国](/articles/rfa/1046480.md)
 
 2-6 [马克龙批评中国疫苗资讯不明    欧盟要求遵循检验规则](/articles/rfa/1046481.md)
-
-2-6 [香港拟引入非本地医生？ 医护界担心为大陆医生“门大开”](/articles/rfa/1046482.md)
 
