--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-8 [回应西方施压 中国在南中国海举行军演为期一月](/articles/voa/1042381.md)
+
+3-8 [林郑月娥：香港立法会选举可能会再次推迟](/articles/voa/1042382.md)
+
 3-8 [结束四天访问行程 教宗周一飞离伊拉克](/articles/voa/1042383.md)
 
 3-8 [中共在建党百年前强化以习思想指导高校党建](/articles/voa/1042384.md)
@@ -596,8 +600,4 @@
 2-25 [中国又有两款新冠疫苗申请上市 或有助于中国“疫苗外交”](/articles/voa/1042679.md)
 
 2-24 [美日不满中国实施海警法 北京称美日安保条约是冷战产物](/articles/voa/1042680.md)
-
-2-24 [香港公布民主派议员总辞后的首份财政预算 首笔国安开支80亿港元](/articles/voa/1042681.md)
-
-2-24 [台湾陆委会释对话善意，国台办以“九二共识”僵化回应](/articles/voa/1042682.md)
 
