--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-8 [欧盟准备对缅甸军方下属企业进行制裁](/articles/rfi/1033427.md)
+
+3-8 [跟王室算账 梅根：“我只是不想再活着了”](/articles/rfi/1033428.md)
+
+3-8 [王毅：“中俄组合”团结如山，联手反对“颜色革命”](/articles/rfi/1033429.md)
+
 3-8 [微软电邮系统遇骇 欧洲银行管理局也遭殃 – 法国国际广播电台 - RFI](/articles/rfi/1033430.md)
 
 3-8 [国际妇女节悲歌  联合国：疫情助长童婚 – 法国国际广播电台 - RFI](/articles/rfi/1033431.md)
@@ -594,10 +600,4 @@
 3-3 [美军驻伊拉克基地遭10枚火箭攻击 1包商丧命 – 法国国际广播电台 - RFI](/articles/rfi/1033725.md)
 
 3-3 [玻利维亚大学生挤垮4楼栏杆 多人摔落至少7死5重伤 – 法国国际广播电台 - RFI](/articles/rfi/1033726.md)
-
-3-3 [詹姆斯得38分白搭  太阳扳倒湖人 – 法国国际广播电台 - RFI](/articles/rfi/1033727.md)
-
-3-3 [COVAX第一批AZ疫苗密送抵台七天内展开注射医护优先](/articles/rfi/1033728.md)
-
-3-3 [中科新冠疫苗年产能很快达20亿剂 称安全](/articles/rfi/1033729.md)
 
