--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-9 [港府：近200名公务员尚未签署效忠香港声明 将安排离职](/articles/voa/1042379.md)
+
+3-8 [蔡英文视察基隆海军基地 誓言“国土主权，寸步不让”](/articles/voa/1042380.md)
+
 3-8 [回应西方施压 中国在南中国海举行军演为期一月](/articles/voa/1042381.md)
 
 3-8 [林郑月娥：香港立法会选举可能会再次推迟](/articles/voa/1042382.md)
@@ -596,8 +600,4 @@
 2-25 [香港政治环境变化促使港人移民台湾](/articles/voa/1042677.md)
 
 2-25 [拜登将签署行政令审查美国关键领域的供应链](/articles/voa/1042678.md)
-
-2-25 [中国又有两款新冠疫苗申请上市 或有助于中国“疫苗外交”](/articles/voa/1042679.md)
-
-2-24 [美日不满中国实施海警法 北京称美日安保条约是冷战产物](/articles/voa/1042680.md)
 
