--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-16 [欧盟疫苗护照或排除中国疫苗  塞尔维亚抗议](/articles/rfa/1046164.md)
+
 3-16 [海外港人发起《2021香港约章》  声明团结流亡港人社区](/articles/rfa/1046165.md)
 
 3-16 [缅甸打砸抢中资企业 台企遭波及](/articles/rfa/1046166.md)
@@ -598,6 +600,4 @@
 2-9 [“精英俱乐部”昙花一现   中国网民渴望了解敏感话题](/articles/rfa/1046462.md)
 
 2-9 [李翘楚被拘留  丁家喜被绑老虎凳七天七夜](/articles/rfa/1046463.md)
-
-2-9 [中国前女记者逃离家暴 自称“另一个拉姆”](/articles/rfa/1046464.md)
 
