--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+3-16 [白宫新冠疫情团队对美国旅行人数大增表示关注](/articles/voa/1042322.md)
+
+3-16 [因疫情造成芯片短缺 通用公司将制造某些无燃料管理模块的皮卡](/articles/voa/1042323.md)
+
+3-16 [45国齐发声要俄罗斯释放反对派领袖和停止迫害](/articles/voa/1042324.md)
+
+3-16 [时事大家谈: “国之大者”蕴藏深意，习近平为突破任期造势？](/articles/voa/1042325.md)
+
 3-16 [罗冠聪等8名海外港人发起2021香港约章 冀团结抗争力量防泡沫化](/articles/voa/1042326.md)
 
 3-16 [中国“疫苗护照”如何获国际认可 缺乏疫苗数据或成一大阻碍](/articles/voa/1042327.md)
@@ -592,12 +600,4 @@
 2-26 [多位共和党参议员推出法案 拟终止给予中国公民十年多次入境签证](/articles/voa/1042620.md)
 
 2-26 [美国常驻联合国代表带着积极的信息抵达联合国](/articles/voa/1042621.md)
-
-2-26 [拜登建议提高最低工资标准 民众看法不一](/articles/voa/1042622.md)
-
-2-26 [美报告促拜登与台湾谈判双边贸易协定解决市场准入障碍](/articles/voa/1042623.md)
-
-2-26 [香港周五实施市民新冠疫苗接种计划](/articles/voa/1042624.md)
-
-2-26 [美国已接种5千万次新冠疫苗](/articles/voa/1042625.md)
 
