--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-16 [打中国疫苗可获签证便利  公平吗？](/articles/rfa/1046159.md)
+
+3-16 [王丹提交政治犯名单 拜登对华人权政策受考验](/articles/rfa/1046160.md)
+
 3-16 [美中会晤在即      话语权争夺鏖战正酣](/articles/rfa/1046161.md)
 
 3-16 [中国拟延迟退休年龄  老百姓怎么看？](/articles/rfa/1046162.md)
@@ -596,8 +600,4 @@
 2-9 [中国逾三千万人接种疫苗  未有公布有效率和副作用数据](/articles/rfa/1046457.md)
 
 2-9 [耿潇男庭上认罪道歉  仍被重判三年](/articles/rfa/1046458.md)
-
-2-9 [法院裁定国安法下保释更严   黎智英须继续还柙待审](/articles/rfa/1046459.md)
-
-2-9 [一百八十多人权组织呼吁抵制北京冬奥会  官媒扬言反制](/articles/rfa/1046460.md)
 
