--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,26 @@
 路透
 ------
 
+3-16 [领航集团暂停在中国开展共同基金业务的计划--华尔街日报](/articles/reuters/1040506.md)
+
+3-16 [日本迅销的缅甸供应商成为纵火袭击目标--共同社](/articles/reuters/1040507.md)
+
+3-16 [中粮集团聘请银行为旗下事业合并及IPO计划提供咨询服务--彭博](/articles/reuters/1040508.md)
+
+3-16 [美国航空业复苏迹象显示后劲可期 股价应声涨至疫情前水准](/articles/reuters/1040509.md)
+
+3-16 [朝鲜警告美国新政府 要和平就不要“惹麻烦”--朝中社](/articles/reuters/1040510.md)
+
+3-16 [拜登政府高层首次出访 将访问日本和韩国](/articles/reuters/1040511.md)
+
+3-16 [中国央视3.15消费者权益晚会上福特和日产英菲尼迪被点名批评](/articles/reuters/1040512.md)
+
+3-16 [富时罗素称小米可重新加入富时罗素指数 此前法庭阻止小米投资禁令](/articles/reuters/1040513.md)
+
+3-16 [IMF研究显示疫情期间优势企业主导地位更强 不利中期增长与创新](/articles/reuters/1040514.md)
+
+3-16 [电音之王和货币大师：特斯拉CEO和CFO的花式新头衔](/articles/reuters/1040515.md)
+
 3-16 [美国众议员哈兰被确认为内政部长 成为美国历史上首位原住民内阁部长](/articles/reuters/1040516.md)
 
 3-16 [日本将暂时上调进口美国牛肉关税 因年度进口量接近上限--共同社](/articles/reuters/1040517.md)
@@ -580,24 +600,4 @@
 3-4 [路透测算的人民币中间价贬至6.4738元附近 美指随美债收益率回升](/articles/reuters/1040804.md)
 
 3-4 [专访：前香港特首梁振英不排除重返旧职](/articles/reuters/1040805.md)
-
-3-4 [美元跟随美债收益率上涨 投资者预计美国经济复苏将跑赢](/articles/reuters/1040806.md)
-
-3-4 [美股下跌 因投资者抛售高估值科技股](/articles/reuters/1040807.md)
-
-3-4 [油价上涨 因美国成品油库存骤降和OPEC+考虑延长减产至4月](/articles/reuters/1040808.md)
-
-3-4 [金价跌至九个月低位 因美债收益率和美元上升降低黄金吸引力](/articles/reuters/1040809.md)
-
-3-3 [中芯国际与荷兰阿斯麦签订晶圆机器购买单 总代价约12亿美元](/articles/reuters/1040810.md)
-
-3-3 [上海出台年内第三份重磅房地产调控政策 实施限售封堵投机炒作空间](/articles/reuters/1040811.md)
-
-3-3 [日本将延长东京及周边地区紧急状态至3月21日--东京放送](/articles/reuters/1040812.md)
-
-3-3 [中国电信企业中兴通讯正在准备电动汽车相关生产线](/articles/reuters/1040813.md)
-
-3-3 [美指趋弱人民币缩量收升结束三连跌 短期缺乏指引料延续区间](/articles/reuters/1040814.md)
-
-3-3 [图表新闻：2月境外机构增持中债登债券近千亿 中美利差缩窄外资热情未熄](/articles/reuters/1040815.md)
 
