--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,7 +7,7 @@
 
 3-16 [德国之声 | 维权人士李翘楚被正式逮捕](/articles/cdt/384948.md)
 
-3-15 [无逸说｜1991年，山东冠县，“百日无孩运动”](/articles/cdt/384961.md)
+3-15 [无逸说｜1991年山东冠县的“百日无孩运动”](/articles/cdt/384961.md)
 
 3-15 [【CDT推荐】本周推荐媒体](/articles/cdt/384972.md)
 
