--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+3-16 [日本央行总裁黑田东彦称须为可能需要发行数字货币作好“充分”准备](/articles/reuters/1040499.md)
+
+3-16 [日本防卫大臣将和美国国防部长讨论中国的活动](/articles/reuters/1040500.md)
+
 3-16 [亚股追随美股冲高 美联储等多家央行本周将开会](/articles/reuters/1040501.md)
 
 3-16 [百达财富管理下调金价预测 未来数月市场对利率上升预期缓和](/articles/reuters/1040502.md)
@@ -596,8 +600,4 @@
 3-4 [香港一名长者接种新冠疫苗两日后死亡 专家委员会称与疫苗无直接关系](/articles/reuters/1040797.md)
 
 3-4 [调查：汇市3月仍难摆脱再通胀交易 美元长期依然偏空](/articles/reuters/1040798.md)
-
-3-4 [焦点：美国经济年初温和复苏 但就业增长势头不及预期--美联储](/articles/reuters/1040799.md)
-
-3-4 [调查：“两会”召开3月中国毫无降息降准预期，政策维稳债市难起波澜](/articles/reuters/1040800.md)
 
