--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+3-16 [美国要求中国改善与澳洲关系--白宫国安会印太协调员坎贝尔](/articles/reuters/1040498.md)
+
 3-16 [日本央行总裁黑田东彦称须为可能需要发行数字货币作好“充分”准备](/articles/reuters/1040499.md)
 
 3-16 [日本防卫大臣将和美国国防部长讨论中国的活动](/articles/reuters/1040500.md)
@@ -598,6 +600,4 @@
 3-4 [焦点：OPEC+考虑将减产延长至4月 而不是提高产量--消息人士](/articles/reuters/1040796.md)
 
 3-4 [香港一名长者接种新冠疫苗两日后死亡 专家委员会称与疫苗无直接关系](/articles/reuters/1040797.md)
-
-3-4 [调查：汇市3月仍难摆脱再通胀交易 美元长期依然偏空](/articles/reuters/1040798.md)
 
