--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-16 [香港社运等纪录片入围奥斯卡  中宣部下令封杀并取消直播](/articles/rfa/1046158.md)
+
 3-16 [打中国疫苗可获签证便利  公平吗？](/articles/rfa/1046159.md)
 
 3-16 [王丹提交政治犯名单 拜登对华人权政策受考验](/articles/rfa/1046160.md)
@@ -598,6 +600,4 @@
 2-9 [首宗国安法案不设陪审团   打破成立176年陪审团制度](/articles/rfa/1046456.md)
 
 2-9 [中国逾三千万人接种疫苗  未有公布有效率和副作用数据](/articles/rfa/1046457.md)
-
-2-9 [耿潇男庭上认罪道歉  仍被重判三年](/articles/rfa/1046458.md)
 
