--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-16 [不走小路、不穿高跟鞋：为何女性牺牲自由也换不来安全？](/articles/nyt/1047088.md)
+
 3-16 [巴西需要疫苗，中国抓住了机会](/articles/nyt/1047089.md)
 
 3-16 [抵制北京冬奥会的正确做法](/articles/nyt/1047090.md)
@@ -598,6 +600,4 @@
 12-28 [简报：疫情记录者张展案今日开庭；中国为何对马云“开战”](/articles/nyt/1047386.md)
 
 12-24 [最长寿大熊猫“新星”去世，享年38岁](/articles/nyt/1047387.md)
-
-12-24 [孙杨禁赛八年裁决被撤销，仲裁庭主席被指种族歧视](/articles/nyt/1047388.md)
 
