--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-16 [美日举行高层会谈 布林肯：共同应对中国威胁将两国带到一起](/articles/voa/1042303.md)
+
 3-16 [以外交豁免权为由拒绝新冠隔离？美驻港领馆指责中资媒体造谣](/articles/voa/1042304.md)
 
 3-16 [美国高级官员尚未抵达首尔 平壤高官先警告“不要有敌对行动”](/articles/voa/1042305.md)
@@ -598,6 +600,4 @@
 2-27 [拜登的对华贸易难题：“减少依赖”还是“自由贸易”](/articles/voa/1042601.md)
 
 2-27 [华尔街日报：拜登政府将继续特朗普时代针对中国技术公司的规定](/articles/voa/1042602.md)
-
-2-27 [美国公布解密情报报告 点明沙特王储批准杀害记者卡舒吉](/articles/voa/1042603.md)
 
