--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-16 [【图说天朝】“一切问题都是工作人员小王造成的”](/articles/cdt/384934.md)
+
 3-16 [向承美｜《白日一删尽》123首当代诗词艺术展暨获奖作品揭晓](/articles/cdt/384937.md)
 
 3-16 [Lovetrumpshate｜难以置信的事实：绝大部分国人只有小学和初中学历](/articles/cdt/384939.md)
@@ -598,6 +600,4 @@
 2-4 [枪稿 | 人人字幕这架梯子，断了|杨时旸专栏](/articles/cdt/386259.md)
 
 2-4 [【网络民议】“正道无路，莫怪歧途”——人人字幕组被查事件微博热帖合集](/articles/cdt/386272.md)
-
-2-3 [【网络民议】如果“人人”有罪  那么人人有罪](/articles/cdt/386275.md)
 
