--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-16 [阿里巴巴被要求出售媒体资产    学者 : 中央要求媒体 “姓习”](/articles/rfa/1046157.md)
+
 3-16 [香港社运等纪录片入围奥斯卡  中宣部下令封杀并取消直播](/articles/rfa/1046158.md)
 
 3-16 [打中国疫苗可获签证便利  公平吗？](/articles/rfa/1046159.md)
@@ -598,6 +600,4 @@
 2-9 [蔡英文春节前讲话再提两岸“对等”接触](/articles/rfa/1046455.md)
 
 2-9 [首宗国安法案不设陪审团   打破成立176年陪审团制度](/articles/rfa/1046456.md)
-
-2-9 [中国逾三千万人接种疫苗  未有公布有效率和副作用数据](/articles/rfa/1046457.md)
 
