--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-16 [专家：德国新冠感染呈现指数式增长](/articles/dw/1043482.md)
+
 3-16 [日美外长、防长共同喊话中国](/articles/dw/1043483.md)
 
 3-16 [英国新外交政策：聚焦印太，因应中国挑战](/articles/dw/1043484.md)
@@ -598,6 +600,4 @@
 2-21 [有电仍缺水！拜登宣布德州陷入“重大灾难”](/articles/dw/1043780.md)
 
 2-21 [默克尔对华态度：很现实还是已过时？](/articles/dw/1043781.md)
-
-2-21 [为何比特币比一整个国家还耗电？](/articles/dw/1043782.md)
 
