--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-16 [联合国：缅甸政变导致食品和燃料价格上涨](/articles/voa/1042299.md)
+
 3-16 [美国要求中国改善与澳大利亚关系 否则美中关系不会改善](/articles/voa/1042300.md)
 
 3-16 [中国因“涉疆谣言”起诉德国学者 是新策略还是作秀？](/articles/voa/1042301.md)
@@ -598,6 +600,4 @@
 2-27 [联合国专家敦促美国对警察暴力和系统性的种族主义进行深远改革](/articles/voa/1042597.md)
 
 2-27 [一带一路能源投资大跌 非洲成战略重点](/articles/voa/1042598.md)
-
-2-27 [白宫尚未决定是否参加北京冬奥 北京抨击“抵制做法错误”](/articles/voa/1042599.md)
 
