--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+3-16 [台防长证实美准售台潜舰重要装备  学者：台湾安全符合美国利益](/articles/rfa/1046153.md)
+
+3-16 [受困抑郁症成把柄  许志永女友李翘楚被临沂检方批捕](/articles/rfa/1046154.md)
+
+3-16 [异议人士申有连被拘十日   四川异议人士至今未放](/articles/rfa/1046155.md)
+
 3-16 [中国施压法国参议员取消访台 台外交部谴责横蛮无礼](/articles/rfa/1046156.md)
 
 3-16 [阿里巴巴被要求出售媒体资产    学者 : 中央要求媒体 “姓习”](/articles/rfa/1046157.md)
@@ -594,10 +600,4 @@
 2-10 [近两百位英国科学家在“非故意”情况下为中国研发武器](/articles/rfa/1046451.md)
 
 2-10 [洛杉矶各界人士纪念李文亮  举办多种形式活动](/articles/rfa/1046452.md)
-
-2-10 [泼墨女孩董瑶琼第三度入精神病院](/articles/rfa/1046453.md)
-
-2-10 [法国军舰巡弋南海，中国反对以航行自由之名危害主权](/articles/rfa/1046454.md)
-
-2-9 [蔡英文春节前讲话再提两岸“对等”接触](/articles/rfa/1046455.md)
 
