--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-17 [中国加强网络控制“再下一城” 加密通讯应用程序Signal疑似被封](/articles/voa/1042298.md)
+
 3-16 [联合国：缅甸政变导致食品和燃料价格上涨](/articles/voa/1042299.md)
 
 3-16 [美国要求中国改善与澳大利亚关系 否则美中关系不会改善](/articles/voa/1042300.md)
@@ -598,6 +600,4 @@
 2-27 [民主党议员希望拜登总统放弃下令发射核武器的专有权力](/articles/voa/1042596.md)
 
 2-27 [联合国专家敦促美国对警察暴力和系统性的种族主义进行深远改革](/articles/voa/1042597.md)
-
-2-27 [一带一路能源投资大跌 非洲成战略重点](/articles/voa/1042598.md)
 
