--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-17 [专访：肛拭子测新冠，真的有必要吗？](/articles/dw/1043476.md)
+
+3-17 [阿里巴巴和马云走下神坛？](/articles/dw/1043477.md)
+
 3-16 [日美外长、防长共同喊话中国 专家：空前强硬](/articles/dw/1043478.md)
 
 3-16 [德语媒体：中国在缅甸的尴尬境地](/articles/dw/1043479.md)
@@ -596,8 +600,4 @@
 2-22 [中印完成撤军 边境紧张局势缓解](/articles/dw/1043774.md)
 
 2-22 [近50万人死于新冠肺炎 美再指中国隐瞒数据](/articles/dw/1043775.md)
-
-2-22 [西班牙说唱歌手入狱引发抗议潮](/articles/dw/1043776.md)
-
-2-21 [德国庆祝犹太人在德生活1700年](/articles/dw/1043777.md)
 
