--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-17 [中国驻德使馆遭纵火 嫌犯被立案检控](/articles/dw/1043474.md)
+
+3-17 [香港电影《少年的你》入围奥斯卡最佳国际长片奖](/articles/dw/1043475.md)
+
 3-17 [专访：肛拭子测新冠，真的有必要吗？](/articles/dw/1043476.md)
 
 3-17 [阿里巴巴和马云走下神坛？](/articles/dw/1043477.md)
@@ -596,8 +600,4 @@
 2-22 [王毅吁美取消关税 盼关系重回正轨](/articles/dw/1043772.md)
 
 2-22 [缅甸示威者号召罢工 政府威胁出动致命武器](/articles/dw/1043773.md)
-
-2-22 [中印完成撤军 边境紧张局势缓解](/articles/dw/1043774.md)
-
-2-22 [近50万人死于新冠肺炎 美再指中国隐瞒数据](/articles/dw/1043775.md)
 
