--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-17 [欧盟准备就新疆人权问题制裁北京 中国官员发出警告](/articles/voa/1042289.md)
+
+3-17 [北京建议病毒源头搜寻扩及全球 专家：逻辑上站不住](/articles/voa/1042290.md)
+
+3-17 [哈里斯副总统对联合国妇女会议讲话：妇女地位即民主地位](/articles/voa/1042291.md)
+
 3-17 [欧洲药管局长：阿斯利康新冠疫苗益处远大于风险](/articles/voa/1042292.md)
 
 3-17 [香港政坛元老谈北京修改选制 刘慧卿批伊朗式选举曾钰成对普选仍乐观](/articles/voa/1042293.md)
@@ -594,10 +600,4 @@
 2-27 [美国防部发言人就日前尖阁列岛主权说法致歉，重申美日安保条约承诺绝不动摇](/articles/voa/1042587.md)
 
 2-27 [众议院通过1.9万亿美元新冠病毒疫情纾困法案](/articles/voa/1042588.md)
-
-2-27 [缅甸警察出动制止抗议 特使呼吁联合国干预政变](/articles/voa/1042589.md)
-
-2-27 [纽约证交所开始启动中海油除牌](/articles/voa/1042590.md)
-
-2-27 [专访美国务院官员：拜登政府放眼重建美欧关系反制中国侵犯人权](/articles/voa/1042591.md)
 
