--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-17 [中国宣称自己的疫苗最好 但有关中国疫苗数据仍不透明](/articles/rfa/1046147.md)
+
+3-17 [民主抗争中的缅甸人为何对中资不满？](/articles/rfa/1046148.md)
+
 3-17 [沙尘暴让“北京变北宋”  环保高调治理成讽刺](/articles/rfa/1046149.md)
 
 3-17 [美日2+2会谈齐声谴责中国     加强美日同盟和关注台海稳定](/articles/rfa/1046150.md)
@@ -596,8 +600,4 @@
 2-10 [被维吾尔人视为避难所   引渡条约下土耳其恐不再安全](/articles/rfa/1046445.md)
 
 2-10 [网信办等部门约谈特斯拉   舆论指产品危害国家安全](/articles/rfa/1046446.md)
-
-2-10 [2020中国出生人口下降15%  破1949年以来纪录](/articles/rfa/1046447.md)
-
-2-10 [世卫专家公布调查结果  几与中国官方叙事吻合](/articles/rfa/1046448.md)
 
