--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-17 [英外交转向印太 约翰逊谨慎看待中国](/articles/dw/1043473.md)
+
 3-17 [中国驻德使馆遭纵火 嫌犯被立案检控](/articles/dw/1043474.md)
 
 3-17 [香港电影《少年的你》入围奥斯卡最佳国际长片奖](/articles/dw/1043475.md)
@@ -598,6 +600,4 @@
 2-22 [中官员强调「爱国者治港」学者：中国想控制香港](/articles/dw/1043771.md)
 
 2-22 [王毅吁美取消关税 盼关系重回正轨](/articles/dw/1043772.md)
-
-2-22 [缅甸示威者号召罢工 政府威胁出动致命武器](/articles/dw/1043773.md)
 
