--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,18 @@
 美国之音
 ------
 
+3-17 [美国移民政策急转弯带来的忧与盼](/articles/voa/1042247.md)
+
+3-17 [中国政府利用拘押或威逼家人向境外维吾尔记者施压](/articles/voa/1042248.md)
+
+3-17 [美众议员再次推出法案 促进美国5G国际领导地位](/articles/voa/1042249.md)
+
+3-17 [美日“2+2”会谈强调台海和平稳定重要性](/articles/voa/1042250.md)
+
+3-17 [美军高层将领警告：与中国竞争的前线就在美国边界以南](/articles/voa/1042251.md)
+
+3-17 [美将在与日韩磋商后公布对朝鲜政策审查](/articles/voa/1042252.md)
+
 3-17 [白宫要义: 白宫强调朝鲜无核化为目标，美法德英国安官员谈美中2+2会谈](/articles/voa/1042253.md)
 
 3-17 [拜登总统开始“救助到了”之旅](/articles/voa/1042254.md)
@@ -588,16 +600,4 @@
 3-2 [曾为抗疫政治明星的纽约州长面临压低新冠死亡人数和性骚扰双重指控](/articles/voa/1042545.md)
 
 3-2 [印度：孟买大停电可能是网络破坏事件 但无证据表明与中国黑客有关](/articles/voa/1042546.md)
-
-3-2 [美国政府报告：严防北京窃取人工智能敏感技术](/articles/voa/1042547.md)
-
-3-2 [多数加拿大人主张：与全球民主国家联手应对中国挑战](/articles/voa/1042548.md)
-
-3-2 [美国贸易代表办公室：拜登政府将使用“一切可以使用的工具”应对中国不公平贸易做法 关注新疆强迫劳动项目](/articles/voa/1042549.md)
-
-3-2 [时事大家谈: 脱贫攻坚创“人间奇迹”，习近平运动治国的典范？](/articles/voa/1042550.md)
-
-3-2 [47名香港民主派人士被控串谋颠覆罪提堂 逾千市民庭外声援](/articles/voa/1042551.md)
-
-3-2 [中国2020年对澳大利亚投资额降至6年低点](/articles/voa/1042552.md)
 
