--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-17 [亚裔美国人团体收到近3800份仇恨和偏见事例报告](/articles/voa/1042246.md)
+
 3-17 [美国移民政策急转弯带来的忧与盼](/articles/voa/1042247.md)
 
 3-17 [中国政府利用拘押或威逼家人向境外维吾尔记者施压](/articles/voa/1042248.md)
@@ -598,6 +600,4 @@
 3-2 [泛民主派支持者在西九龙法庭外集会](/articles/voa/1042544.md)
 
 3-2 [曾为抗疫政治明星的纽约州长面临压低新冠死亡人数和性骚扰双重指控](/articles/voa/1042545.md)
-
-3-2 [印度：孟买大停电可能是网络破坏事件 但无证据表明与中国黑客有关](/articles/voa/1042546.md)
 
